--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             </exclusions>
         </dependency>
 
+        <!--jedis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
 
 
     </dependencies>
