--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>2.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.14</version>
+        </dependency>
 
 
     </dependencies>
